bin/testsuite/tests/compiler/src/errors/compiler5648.swg
#global testerror "Err0356"
#test
{
    var a: [2 : 2] s32
}

